# cmake_proj

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  start_server.sh  update_submodule.sh
3rd_libs/hpp/glog/: logging.h
3rd_libs/include/asio1.61.1/: config.status
3rd_libs/include/asio1.61.1/src/examples/cpp11/allocation/: server
3rd_libs/include/asio1.61.1/src/examples/cpp11/allocation/.deps/: server.Po
3rd_libs/include/asio1.61.1/src/examples/cpp11/buffers/: reference_counted
3rd_libs/include/asio1.61.1/src/examples/cpp11/buffers/.deps/: reference_counted.Po
3rd_libs/include/asio1.61.1/src/examples/cpp11/chat/: chat_client  chat_server
3rd_libs/include/asio1.61.1/src/examples/cpp11/echo/: async_tcp_echo_server  async_udp_echo_server  blocking_tcp_echo_client  blocking_tcp_echo_server  blocking_udp_echo_client  blocking_udp_echo_server
3rd_libs/include/asio1.61.1/src/examples/cpp11/executors/: actor  bank_account_1  bank_account_2  fork_join  pipeline  priority_scheduler
3rd_libs/include/asio1.61.1/src/examples/cpp11/fork/: daemon  process_per_connection
3rd_libs/include/asio1.61.1/src/examples/cpp11/futures/: daytime_client
3rd_libs/include/asio1.61.1/src/examples/cpp11/invocation/: prioritised_handlers
3rd_libs/include/asio1.61.1/src/examples/cpp11/iostreams/: http_client
3rd_libs/include/asio1.61.1/src/examples/cpp11/local/: connect_pair  iostream_client  stream_client  stream_server
3rd_libs/include/asio1.61.1/src/examples/cpp11/multicast/: receiver  sender
3rd_libs/include/asio1.61.1/src/examples/cpp11/nonblocking/: third_party_lib
3rd_libs/include/asio1.61.1/src/examples/cpp11/operations/: composed_1  composed_2  composed_3  composed_4  composed_5  composed_6  composed_7  composed_8
3rd_libs/include/asio1.61.1/src/examples/cpp11/socks4/: sync_client
3rd_libs/include/asio1.61.1/src/examples/cpp11/timeouts/: async_tcp_client  blocking_tcp_client  blocking_token_tcp_client  blocking_udp_client  server
3rd_libs/include/asio1.61.1/src/examples/cpp11/timers/: time_t_timer
3rd_libs/include/glog/: config.h  config.h.in
3rd_libs/include/glog/.deps/: demangle_unittest-demangle_unittest.Po  libglog_la-demangle.Plo  libglog_la-logging.Plo  libglog_la-raw_logging.Plo  libglog_la-signalhandler.Plo  libglog_la-symbolize.Plo  libglog_la-utilities.Plo  libglog_la-vlog_is_on.Plo  logging_striptest0-logging_striptest_main.Po  logging_striptest10-logging_striptest10.Po  logging_striptest2-logging_striptest2.Po  logging_unittest-logging_unittest.Po  signalhandler_unittest-signalhandler_unittest.Po  stacktrace_unittest-stacktrace_unittest.Po  stl_logging_unittest-stl_logging_unittest.Po  symbolize_pie_unittest-symbolize_unittest.Po  symbolize_unittest-symbolize_unittest.Po  utilities_unittest-utilities_unittest.Po
3rd_libs/include/protobuf3.6.1/: libprotoc.la  protoc
3rd_libs/include/protobuf3.6.1/.deps/: any.Plo  arena.Plo  field_mask.pb.Plo  generated_message_reflection.Plo  generated_message_table_driven.Plo  generated_message_table_driven_lite.Plo  implicit_weak_message.Plo  map_field.Plo  message_lite.Plo  service.Plo  struct.pb.Plo  text_format.Plo  timestamp.pb.Plo  unknown_field_set.Plo  wire_format.Plo  wire_format_lite.Plo  wrappers.pb.Plo
3rd_libs/include/protobuf3.6.1/google/protobuf/.deps/: any.pb.Plo  api.pb.Plo  arenastring.Plo  descriptor.Plo  descriptor.pb.Plo  descriptor_database.Plo  duration.pb.Plo  dynamic_message.Plo  empty.pb.Plo  extension_set.Plo  extension_set_heavy.Plo  generated_message_util.Plo  message.Plo  reflection_ops.Plo  repeated_field.Plo  source_context.pb.Plo  type.pb.Plo
3rd_libs/include/protobuf3.6.1/google/protobuf/compiler/.deps/: code_generator.Plo  command_line_interface.Plo  importer.Plo  main.Po  parser.Plo  plugin.Plo  plugin.pb.Plo  subprocess.Plo  zip_writer.Plo
3rd_libs/include/protobuf3.6.1/google/protobuf/io/.deps/: coded_stream.Plo  gzip_stream.Plo  printer.Plo  strtod.Plo  tokenizer.Plo  zero_copy_stream.Plo  zero_copy_stream_impl.Plo  zero_copy_stream_impl_lite.Plo
3rd_libs/include/protobuf3.6.1/google/protobuf/stubs/.deps/: bytestream.Plo  common.Plo  int128.Plo  mathlimits.Plo  status.Plo  statusor.Plo  stringpiece.Plo  stringprintf.Plo  structurally_valid.Plo  strutil.Plo  substitute.Plo  time.Plo
3rd_libs/include/protobuf3.6.1/google/protobuf/util/.deps/: delimited_message_util.Plo  field_comparator.Plo  field_mask_util.Plo  json_util.Plo  message_differencer.Plo  time_util.Plo  type_resolver_util.Plo
3rd_libs/lib/: libglog.dylib  libglog.la  libprotobuf-lite.17.dylib  libprotobuf-lite.18.dylib  libprotobuf.17.dylib
cmake_exec/: clean_all_build.sh
cmake_exec/10_cpack/: CMakeLists.txt  foo.cpp  run.sh
cmake_exec/1_hello_world/: CMakeLists.txt  run.sh
cmake_exec/2_simple_lib/: CMakeLists.txt  hello_world.cpp
cmake_exec/2_simple_lib/lib/: CMakeLists.txt
cmake_exec/2_simple_lib/lib/src/: hellolib.cpp
cmake_exec/3_modern_lib/: CMakeLists.txt
cmake_exec/3_modern_lib/lib/: CMakeLists.txt
cmake_exec/3_modern_lib/lib/include/mylib/: mylib.hpp
cmake_exec/3_modern_lib/lib/src/: mylib.cpp
cmake_exec/3_modern_lib/lib/src/impl/: mylib_impl.cpp  mylib_impl.hpp
cmake_exec/3_modern_lib/src/: CMakeLists.txt  main.cpp
cmake_exec/4_function/: get_system_info.cmake  hello_world.cmake  run.sh
cmake_exec/5_test/: CMakeLists.txt  fail.cpp  pass.cpp  run.sh
cmake_exec/6_generate_exp/: CMakeLists.txt  hellolib.cpp  hellolib.hpp  run.sh
cmake_exec/7_find_targets/: CMakeLists.txt
cmake_exec/7_find_targets/lib3/: CMakeLists.txt
cmake_exec/7_find_targets/lib5/: CMakeLists.txt
cmake_exec/7_find_targets/lib6/: CMakeLists.txt
cmake_exec/7_find_targets/src/: CMakeLists.txt
cmake_exec/8_cyacle_find/: CMakeLists.txt  run.sh
cmake_exec/9_find_foo/: find_foo.cmake  run.sh
doc/: 1-CMakelists-add_lib.txt  2-CMakelists-use_lib.txt  3-MyLibraryConfig.cmake
proto/: CMakelists.txt  pb_test.proto
src/: CMakeLists.txt  mod.cpp  mod.hpp  player.cpp  player.hpp
test/: .CMakeLists.txt.swp  CMakeLists.txt  test_tgtest.cpp
util/: CMakeLists.txt  calc.cpp  calc.hpp
(+141 files in other folders)
